tests/auto/grpc/client/clientstream/tst_grpc_client_clientstream.cpp
@@ -26,6 +26,7 @@ private Q_SLOTS:
     void valid();
     void sequentialSend();
     void sequentialSendWithDone();
+    void sequentialSendWithDoneWhenChannelNotReady();
 };
 
 void QtGrpcClientClientStreamTest::valid()
@@ -97,6 +98,42 @@ void QtGrpcClientClientStreamTest::sequentialSendWithDone()
     request.setTestFieldString("Stream");
 
     auto stream = client()->testMethodClientStreamWithDone(request);
+
+    // Ensure that messages are not lost during the sequential sending right after the stream is
+    // instanciated.
+    for (int i = 1; i < (ExpectedMessageCount - 1); ++i) {
+        stream->sendMessage(request);
+    }
+    stream->writesDone();
+    request.setTestFieldString("StreamWrong");
+    stream->sendMessage(request);
+
+    QSignalSpy streamFinishedSpy(stream.get(), &QGrpcServerStream::finished);
+    QVERIFY(streamFinishedSpy.isValid());
+    QSignalSpy streamErrorSpy(stream.get(), &QGrpcServerStream::errorOccurred);
+    QVERIFY(streamErrorSpy.isValid());
+
+    QTRY_COMPARE_EQ_WITH_TIMEOUT(streamFinishedSpy.count(), 1,
+                                 MessageLatencyWithThreshold * ExpectedMessageCount);
+    QCOMPARE(streamErrorSpy.count(), 0);
+
+    std::optional<SimpleStringMessage> result = stream->read<SimpleStringMessage>();
+    QCOMPARE_EQ(result->testFieldString(), "Stream1Stream2Stream3");
+}
+
+void QtGrpcClientClientStreamTest::sequentialSendWithDoneWhenChannelNotReady()
+{
+    auto channel = std::shared_ptr<QAbstractGrpcChannel>(new QGrpcHttp2Channel(QGrpcChannelOptions{
+        QUrl("http://localhost:50051", QUrl::StrictMode) }));
+    auto client = std::make_shared<qtgrpc::tests::TestService::Client>();
+    client->attachChannel(std::move(channel));
+
+    const int ExpectedMessageCount = 4;
+
+    SimpleStringMessage request;
+    request.setTestFieldString("Stream");
+
+    auto stream = client->testMethodClientStreamWithDone(request);
 
     // Ensure that messages are not lost during the sequential sending right after the stream is
     // instanciated.
